# eye-py-decorators

./: .gitignore  README.md  clean.sh  mypy.ini  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
src/eye_decorators/: __init__.py  dec_decorator.py  dec_rounded.py  dec_timed.py  decorator.py  rounded.py  stub.py  timed.py
tests/: test_rounded.py
