[metadata]
name = eye_decorators
description = Decorators for Humans
author = Evan Elias Young
license = GNU GPLv3
license_file = LICENSE
platforms = unix, linx, osxs, cygwin, win32
keywords = decorators, generic, utility
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities


[options]
packages =
    eye_decorators
python_requires = >= 3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    mypy-extensions>=0.4.3
    flake8>=4.0.1
    tox>=3.24.5

[options.package_data]
eye_decorators = py.typed

[flake8]
max-line-length = 160
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    Lib,
    Scripts
per-file-ignores =
    __init__.py: F401
